Optimize app SEO

--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FilmSeek</title>
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="FilmSeek helps you search, discover, and explore movies and TV shows with detailed info."
+    />
+    <meta
+      name="keywords"
+      content="FilmSeek, movie search, TV series, film database, movie explorer, show tracker, film info, cinema app, entertainment, movies, IMDb"
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://film-seek.vercel.app/" />
+    <meta property="og:title" content="FilmSeek — Search Less, Watch More!" />
+    <meta
+      property="og:description"
+      content="Search and explore movies and series with FilmSeek — your personal movie guide."
+    />
+    <meta
+      property="og:image"
+      content="https://film-seek.vercel.app/screenshots/search_view.png"
+    />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://film-seek.vercel.app/" />
+    <meta
+      property="twitter:title"
+      content="FilmSeek — Search Less, Watch More!"
+    />
+    <meta
+      property="twitter:description"
+      content="Search and explore movies and series with FilmSeek — your personal movie guide."
+    />
+    <meta
+      property="twitter:image"
+      content="https://film-seek.vercel.app/screenshots/search_view.png"
+    />
+    <title>FilmSeek — Find and Explore Movies</title>
+    <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
